--- a/课程设计.md
+++ b/课程设计.md
@@ -23,6 +23,7 @@
     cname|课程名称|char(20)|唯一且不为空
     cpan|先修课编号|char(6)|参照本表的con
     ceredit|学分|SMALLINT|0-10之间的数
+    num|选课人数|SMALLINT|0-50之间的数
   * #### 成绩信息表(score)
     字段名称 | 释义 | 属性 | 备注 
     ------ | ------ | ------ | ------ 
