--- a/课程设计.md
+++ b/课程设计.md
@@ -10,12 +10,14 @@
     |tel|联系方式|char(11)|唯一且不为空|
     |adress|家庭籍贯|varchar(50)|不为空
     |pno|专业编号|char(5)|参照school表的pno|
+    |state|删除|char(1)|只能为1/0，默认为1
   * #### 学校院系信息表(school)
     字段名称 | 释义 | 属性 | 备注 
     ------ | ------ | ------ | ------ 
     pno|专业编号|char(5)|主键
     pname|专业名称|char(30)|唯一且不为空
     dname|院系名称|char(30)|唯一且不为空
+    state|删除|char(1)|只能为1/0，默认为1
   * #### 课程信息表(course)
     字段名称 | 释义 | 属性 | 备注 
     ------ | ------ | ------ | ------ 
@@ -24,10 +26,12 @@
     cpan|先修课编号|char(6)|参照本表的con
     ceredit|学分|SMALLINT|0-10之间的数
     num|选课人数|SMALLINT|0-50之间的数
+    state|删除|char(1)|只能为1/0，默认为1
   * #### 成绩信息表(score)
     字段名称 | 释义 | 属性 | 备注 
     ------ | ------ | ------ | ------ 
     sno|学号|char(12)|参照information的sno,主键之一
     cno|专业编号|char(6)|参照course的cno,主键之一 
     grade|成绩|SMALLINT|0-100之间的数 
+    state|删除|char(1)|只能为1/0，默认为1
 ### 各表间联系（实体图）
