--- a/课程设计.md
+++ b/课程设计.md
@@ -24,8 +24,8 @@
     cno|课程编号|char(6)|主键
     cname|课程名称|char(20)|唯一且不为空
     cpan|先修课编号|char(6)|参照本表的con
-    ceredit|学分|SMALLINT|0-10之间的数
-    num|客容量|SMALLINT|0-50之间的数
+    ceredit|学分|SMALLINT|0-10之间的数  
+    num|客容量|SMALLINT|0-50之间的数   
     state|删除|char(1)|只能为1/0，默认为1
   * #### 成绩信息表(score)
     字段名称 | 释义 | 属性 | 备注 
@@ -34,10 +34,10 @@
     cno|专业编号|char(6)|参照course的cno,主键之一 
     grade|成绩|SMALLINT|0-100之间的数 
     state|删除|char(1)|只能为1/0，默认为1
-   * ### 用户登录表
-   字段名称 | 释义 | 属性 | 备注 
+  * #### 用户登录表(lod)  
+    字段名称 | 释义 | 属性 | 备注
     ------ | ------ | ------ | ------
-    uid|用户登录ID|char(12)|
-    pwd|密码|pwd(6)|默认为“000000”
-    
+    uid|用户登录名|char(12)|无
+    pwd|密码|char(6)|默认为“000000”
+    grade|成绩|SMALLINT|0-100之间的数
 ### 各表间联系（实体图）
