--- a/课程设计.md
+++ b/课程设计.md
@@ -5,7 +5,7 @@
     |------ | ------ | ------ | ------ |
     |sno | 学号  | char(12)  | 主键  
     |sname|姓名|char(10)|不为空|
-    |sex|性别|char(2)|只能为男/女|
+    |sex|性别|char(4)|只能为男/女|
     |birth|出生年月|date|不能为空|
     |tel|联系方式|char(11)|唯一且不为空|
     |adress|家庭籍贯|varchar(50)|不为空
@@ -22,10 +22,10 @@
     字段名称 | 释义 | 属性 | 备注 
     ------ | ------ | ------ | ------ 
     cno|课程编号|char(6)|主键
-    cname|课程名称|char(20)|唯一且不为空
+    cname|课程名称|char(64)|唯一且不为空
     cpan|先修课编号|char(6)|参照本表的con
     ceredit|学分|SMALLINT|0-10之间的数  
-    num|客容量|SMALLINT|0-50之间的数   
+    num|客容量|SMALLINT|大于0 
     state|删除|char(1)|只能为1/0，默认为1
   * #### 成绩信息表(score)
     字段名称 | 释义 | 属性 | 备注 
@@ -34,10 +34,4 @@
     cno|专业编号|char(6)|参照course的cno,主键之一 
     grade|成绩|SMALLINT|0-100之间的数 
     state|删除|char(1)|只能为1/0，默认为1
-  * #### 用户登录表(lod)  
-    字段名称 | 释义 | 属性 | 备注
-    ------ | ------ | ------ | ------
-    uid|用户登录名|char(12)|无
-    pwd|密码|char(6)|默认为“000000”
-    grade|成绩|SMALLINT|0-100之间的数
 ### 各表间联系（实体图）
