--- a/课程设计.md
+++ b/课程设计.md
@@ -24,9 +24,9 @@
     cno|课程编号|char(6)|主键
     cname|课程名称|char(64)|唯一且不为空
     cpan|先修课编号|char(6)|参照本表的con
-    ceredit|学分|SMALLINT|0-10之间的数  
-    num|客容量|SMALLINT|大于0 
-    state|删除|char(1)|只能为1/0，默认为1
+    ceredit|学分|SMALLINT|0-10之间的数
+    num|课容量|SMALLINT|大于0的数
+    state|删除|char(1)|只能为1/0，默认为1
   * #### 成绩信息表(score)
     字段名称 | 释义 | 属性 | 备注 
     ------ | ------ | ------ | ------ 
